--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-database-integration",
+  "name": "express-mongodb-integration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,8 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
-    "mysql": "^2.18.1",
+    "http-errors": "^2.0.0",
+    "mongoose": "^6.3.6",
     "nodemon": "^2.0.16"
   }
 }
